@@ -21,6 +21,11 @@ version 2.12.0 (??/??/????):
 	  It can be found here: https://github.com/EionRobb/funyahoo-plusplus
 	  This also removes support for Yahoo! Japan. According to
 	  http://messenger.yahoo.co.jp/ the service ended March 26th, 2014.
+	* Remove the Facebook (XMPP) account option. According to
+	  https://developers.facebook.com/docs/chat the XMPP Chat API service
+	  ended April 30th, 2015. A new protocol plugin has been written,
+	  using a different method, to support Facebook. It can be found at
+	  https://github.com/dequis/purple-facebook/wiki
 
 	General
 	* Replaced instances of d.pidgin.im with developer.pidgin.im and updated the
